Fix player dialog scaling on mobile

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -29,6 +29,7 @@ $font-family: 'VT323', monospace;
   align-self: center;
 
   span {
+    text-align: center;
     font-size: 7vh;
   }
 }
